# knowledge-graph

./: .gitignore  CHANGELOG.md  CLAUDE.md  PRODUCT.md  README.MD  config.yaml.example  feeds-cn.yaml  feeds-new.yaml  feeds.yaml.example  front.tsx  pyproject.toml  test_problem_gen.py
.claude/hooks/: kg-algo-auto-load.sh
.obsidian/: app.json  community-plugins.json  graph.json  templater.json
agents/: api.py  api_client.py  ask.py  backlinks.py  batch_ingest.py  bm25_store.py  chat_store.py  cli.py  config.py  course_knowledge.py  cross_domain.py  diff_store.py  distill.py  embeddings.py  exam_generator.py  export_entries.py  file_converter.py  graph_store.py  graph_viz.py  history.py  ingest.py  interview.py  json_utils.py  link.py  prefilter.py  problem_generator.py  quality.py  query.py  quiz.py  radar.py  review.py  sync_engine.py  utils.py  vector_store.py
agents/api_routes/: conversations.py  course_knowledge.py  distill.py  (+14 more)
benchmarks/: bench_python.py  mock_sse_server.go  results_go.json  results_go_sonic.json  results_python.json  run_benchmarks.sh
docs/: HOOKS.md  RSS-FINAL-SUMMARY.md  RSS-IMPLEMENTATION.md  RSS-INGESTION.md  RSS-MODEL-CONFIG.md
sc/: kg-export.md  kg-ingest.md  kg-load.md  kg-quiz.md  kg-review.md
scripts/: add_interview_tags.py  expand_interview_bank.py  fill_interview_bank_to_50.py  generate_interview_bank.py  kg-pull-rss.sh  post-write-hook.sh  review-reminder.py  session-kg-load.sh  weekly-radar.py
tests/: test_ask.py  test_diff_store.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
(+40 files in other folders)
